[gd_scene load_steps=11 format=2]

[ext_resource path="res://Asset/World/DefaultEnv.tres" type="Environment" id=1]
[ext_resource path="res://Script/Level/StageDefault.gd" type="Script" id=2]
[ext_resource path="res://Scene/UI or HUD/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Asset/Audio/Bgm/Juhani Junkala [Retro Game Music Pack] Level 3.ogg" type="AudioStream" id=4]
[ext_resource path="res://Asset/Background/CanyonBackground1.png" type="Texture" id=5]
[ext_resource path="res://Asset/Background/CanyonBackground2.png" type="Texture" id=6]
[ext_resource path="res://Script/MultiTargetCamera2D/MultiTargetCamera2D.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "Begin"
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSpawn:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 240, 405 ), Vector2( 240, 220 ), Vector2( 240, 230 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "End"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSpawn:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 240, 230 ), Vector2( 240, 240 ), Vector2( 240, -120 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSpawn:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 240, 405 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.166667, 0.166667, 0.166667, 1 ) ]
}

[node name="StageDefault" type="Node2D" groups=["Level"]]
script = ExtResource( 2 )

[node name="HUD" parent="." instance=ExtResource( 3 )]
layer = 1

[node name="BasicEnemySpawnTimer" type="Timer" parent="."]
wait_time = 0.7

[node name="SpecialEnemySpawnTimer" type="Timer" parent="."]
wait_time = 7.0

[node name="StageTimer" type="Timer" parent="."]
wait_time = 45.0
one_shot = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 1 )

[node name="Background2" type="Sprite" parent="."]
position = Vector2( -126, -109 )
z_index = -2
texture = ExtResource( 6 )
centered = false
region_enabled = true
region_rect = Rect2( -80, 0, 725, 500 )

[node name="Background3" type="Sprite" parent="."]
position = Vector2( -126, -109 )
z_index = -2
texture = ExtResource( 5 )
centered = false
region_enabled = true
region_rect = Rect2( -80, 0, 725, 500 )
region_filter_clip = true

[node name="PlayerSpawn" type="Position2D" parent="."]
position = Vector2( 240, 405 )

[node name="P1SpawnPos" type="Position2D" parent="PlayerSpawn"]
position = Vector2( 150, 0 )

[node name="P2SpawnPos" type="Position2D" parent="PlayerSpawn"]
position = Vector2( -150, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Begin"
anims/Begin = SubResource( 1 )
anims/End = SubResource( 3 )
anims/RESET = SubResource( 2 )

[node name="ColorRect" type="CanvasModulate" parent="."]
color = Color( 0.166667, 0.166667, 0.166667, 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0

[node name="MTCamera2D" type="Camera2D" parent="." groups=["Camera"]]
position = Vector2( 240, 134 )
current = true
limit_left = -50
limit_top = -50
limit_right = 530
limit_bottom = 320
limit_smoothed = true
smoothing_enabled = true
drag_margin_left = 0.8
drag_margin_top = 0.8
drag_margin_right = 0.8
drag_margin_bottom = 0.8
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource( 7 )
max_zoom = 1.3
margin = Vector2( 50, 50 )
target_group = "Target"

[connection signal="timeout" from="StageTimer" to="." method="_on_StageTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
